Make sure prices are visible

--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ body {
 }
 
 .btn {
-    height: 100%;
+    height: 80%;
     width: 100%;
     line-height: normal;
     background-size: contain;
@@ -99,7 +99,7 @@ body {
 }
 
 .btn_row {
-    height: 100px;
+    height: 110px;
 }
 
 title {
